all changes contact-form

--- a/contact-us.html
+++ b/contact-us.html
@@ -104,12 +104,12 @@
 									<ul
 										class="header-social-icons social-icons social-icons-clean social-icons-icon-dark social-icons-medium me-2 mb-0 d-none d-sm-block ms-1">
 										<li class="social-icons-instagram">
-											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank" title="Instagram"><i
-													class="fab fa-instagram"></i></a>
+											<a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+												title="Instagram"><i class="fab fa-instagram"></i></a>
 										</li>
 										<li class="social-icons-facebook">
-											<a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank" title="Facebook"><i
-													class="fab fa-facebook-f"></i></a>
+											<a href="https://www.facebook.com/profile.php?id=61565031478867"
+												target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -141,15 +141,15 @@
 													</a>
 												</li>
 												<li>
-                                                    <a class="nav-link" href="about-us.html">
-                                                        About US
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a class="nav-link" href="catering.html">
-                                                        Catering
-                                                    </a>
-                                                </li>
+													<a class="nav-link" href="about-us.html">
+														About US
+													</a>
+												</li>
+												<li>
+													<a class="nav-link" href="catering.html">
+														Catering
+													</a>
+												</li>
 												<li>
 													<a class="nav-link" href="menu.html">
 														Menu
@@ -222,23 +222,32 @@
 
 								<input type="hidden" name="subject" value="Church - Subject" />
 								<div class="row mb-3">
-									<div class="form-group col-sm-6">
+									<div class="form-group col-sm-12">
 										<input type="text" value="" data-msg-required="Please enter your name."
-											maxlength="100" class="form-control custom-xs-mb" name="name"
-											id="contactName" placeholder="Your Name" required>
+											maxlength="100" class="form-control custom-xs-mb" name="name" id="name"
+											placeholder="Your Name" required>
 									</div>
+
+								</div>
+								<div class="row mb-3">
 									<div class="form-group col-sm-6">
 										<input type="email" value=""
 											data-msg-required="Please enter your email address."
 											data-msg-email="Please enter a valid email address." maxlength="100"
-											class="form-control" name="email" id="contactEmail"
-											placeholder="Your E-mail" required>
+											class="form-control" name="email" id="email" placeholder="Your E-mail"
+											required>
+									</div>
+									<div class="form-group col-sm-6">
+										<input type="text" value="" data-msg-required="Please enter your Contact Number"
+											data-msg-email="Please enter a valid Contact Number" maxlength="100"
+											class="form-control" name="number" id="number"
+											placeholder="Your Contact Number" required>
 									</div>
 								</div>
 								<div class="row mb-3">
 									<div class="form-group col">
 										<textarea maxlength="5000" data-msg-required="Please enter your message."
-											rows="4" class="form-control" name="message" id="contactMessage"
+											rows="4" class="form-control" name="message" id="message"
 											placeholder="Your Message" required></textarea>
 									</div>
 								</div>
@@ -317,9 +326,11 @@
 					<div class="row text-center pb-5">
 						<div class="col">
 							<ul class="social-icons social-icons-clean custom-social-icons mb-3">
-								<li class="social-icons-facebook"><a href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
+								<li class="social-icons-facebook"><a
+										href="https://www.facebook.com/profile.php?id=61565031478867" target="_blank"
 										title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-								<li class="social-icons-instagram"><a href="https://www.instagram.com/khana_khazana1760/" target="_blank"
+								<li class="social-icons-instagram"><a
+										href="https://www.instagram.com/khana_khazana1760/" target="_blank"
 										title="Instagram"><i class="fab fa-instagram"></i></a></li>
 							</ul>
 							<p class="alternative-font-4 text-3 text-color-light opacity-7">Copyright © 2025 Khana
